syntax = "proto3";

import "library/cpp/lwtrace/protos/lwtrace.proto";

package NCloud.NProto;

option java_package = "ru.yandex.cloud.storage.proto";
option go_package = "a.yandex-team.ru/cloud/storage/core/protos";

////////////////////////////////////////////////////////////////////////////////
// Message trace information.

message TTraceInfo
{
    // Timestamp of remote trace start.
    uint64 RequestStartTime = 1;

    // Timestamp of remote trace completion.
    uint64 RequestEndTime = 2;

    // serialized lwtrace probes.
    NLWTrace.TTraceResponse LWTrace = 3;
}
